# learn_opengl

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: find_dependencies_linux.cmake  find_dependencies_window.cmake
cmake/window/: find_win_boost.cmake  find_win_pcl.cmake  find_win_qt.cmake  find_win_vtk.cmake
example/: CMakeLists.txt
example/example_1_window/: CMakeLists.txt  main.cxx
example/example_2_window/: CMakeLists.txt  main.cxx
example/example_3_triangle/: CMakeLists.txt  main.cxx  shader_source.hpp
example/example_4_rectangle/: CMakeLists.txt  main.cxx
example/example_5_shader/: CMakeLists.txt  main.cxx  shader.cxx  shader.hpp
example/example_5_shader/shader/: shader.vert
example/example_6_textures/: CMakeLists.txt  main.cxx  shader.cxx  shader.hpp
example/example_6_textures/shader/: shader.frag
example/example_7_transformations/: CMakeLists.txt  main.cxx  shader.hpp
example/example_7_transformations2/: CMakeLists.txt  main.cxx  shader.cxx
example/example_7_transformations2/shader/: shader.vert
example/example_8_coordinate_systems/: CMakeLists.txt  main.cxx
example/example_8_coordinate_systems/shader/: shader.vert
example/example_9_camera/: CMakeLists.txt  camera.cxx  camera.hpp  camera2.hpp  main.cxx  shader_m.h
example/example_9_camera/shader/: shader.frag
